# adaptive-chunking

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LLM.md  NOTICE  README.md  SBOM.md  pyproject.toml
.github/workflows/: ci.yml
data/clair/adi_parsed/: Ada (technique)_Recommandations de sécurité pour un système d'IA générative.json  Ada (technique)_Standards - Interpretability.json  Ada (technique)_Standards - Robustness.json  Ada (technique)_Standards - Sustainability.json  Norma (légal)_CCPA Act.json  Norma (légal)_Code of Practice for General Purpose - AI Models Copyright - Chapter 3.json  Norma (légal)_Code of Practice for General Purpose - AI Models Safety and Security - Chapter 1.json  Norma (légal)_Council of Europe Framework Convention on Artificial Intelligence and Human Rights, Democracy and the Rule of Law.json  Norma (légal)_EDPS Generative AI guidelines.json  Norma (légal)_Entrée en vigueur du règlement européen sur l’IA - CNIL.json  Norma (légal)_Harmonising AI - OXIL.json  Norma (légal)_Les fiches pratiques IA -  CNIL.json  Norma (légal)_Provider Guidelines - European Commission.json  Sophia (sciences sociales)_AI & Algorithmic Risks Report Netherlands.json  Sophia (sciences sociales)_Artificial Intelligence, Human Rights, Democracy, and The Rule Of Law.json  Sophia (sciences sociales)_Consultation paper on AI regulation - emerging approaches across the world.json  Sophia (sciences sociales)_Livre blanc - Impact AI.json  Sophia (sciences sociales)_RAPPORT CI INTELLIGENCE ARTIFICIELLE.json  Sophia (sciences sociales)_Responsible AI - A competitive edge in the data and GenAI landscape.json
data/clair/mentions/: Norma (légal)_CCPA Act.parquet  (+48 more)
src/adaptive_chunking/: __init__.py  chunking_utils.py  compute_metrics.py  extract_mentions.py  jina_embedder.py  metrics.py  parsing.py  pipeline.py  postprocessing.py  split_documents.py  splitters.py
tests/: conftest.py  test_chunking_utils.py  test_chunking_utils_extra.py  test_compute_metrics.py  test_extract_mentions.py  test_jina.py  test_metrics.py  test_metrics_extra.py  test_parsing.py  test_parsing_helpers.py  test_pipeline.py  test_postprocessing.py  test_postprocessing_drivers.py  test_postprocessing_extra.py  test_split_documents.py  test_splitters.py  test_splitters_extra.py
(+11 files in other folders)
